test/libsolidity/syntaxTests/parsing/mapping_nonelementary_key_1.sol
contract c {
	mapping(uint[] => uint) data;
}
// ----
// ParserError: (26-27): Expected '=>' but got '['
